tests/spec/build/snapshots/cross_module_bounded_impl_tracks_imports.snap
---
source: tests/spec/build/mod.rs
---
// === containers/lib.go ===
package containers

import (
	"fmt"
	"github.com/user/myproject/ifaces"
)

type Box[T ifaces.Showable] struct {
	Value T
}

func (b Box[T]) String() string {
	return fmt.Sprintf("Box { value: %v }", b.Value)
}

func (b Box[T]) Display() string {
	return fmt.Sprintf("Box(%s)", b.Value.Show())
}


// === ifaces/lib.go ===
package ifaces

type Showable interface {
	Show() string
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/containers"
)

type Item struct {
	name string
}

func (i Item) String() string {
	return fmt.Sprintf("Item { name: %v }", i.name)
}

func (i Item) Show() string {
	return i.name
}

func main() {
	b := containers.Box[Item]{Value: Item{name: "hello"}}
	fmt.Println(b.Display())
}
