tests/spec/build/snapshots/cross_module_enum_and_namespace_alias.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/utils"
)

func main() {
	fmt.Println("rgb direct", utils.MakeColorRGB())
}


// === utils/color.go ===
package utils

func MakeColorRGB() Color {
	return Color{Tag: ColorRGB}
}

type ColorTag int

const (
	ColorRGB ColorTag = iota
)

type Color struct {
	Tag ColorTag
}
