tests/spec/build/snapshots/cross_module_generic_function_value_instantiated.snap
---
source: tests/spec/build/mod.rs
---
// === lib/lib.go ===
package lib

func Id[T any](x T) T {
	return x
}


// === main.go ===
package main

import "github.com/user/myproject/lib"

func main() {
	f := lib.Id[int]
	result := f(42)
	_ = result
}
