tests/spec/build/snapshots/cross_module_generic_return_only_string_vs_int.snap
---
source: tests/spec/build/mod.rs
---
// === lib/mod.go ===
package lib

import "fmt"

func MakeValidatedValid[T any](arg0 T) Validated[T] {
	return Validated[T]{Tag: ValidatedValid, Valid: arg0}
}

func MakeValidatedInvalid[T any](arg0 string) Validated[T] {
	return Validated[T]{Tag: ValidatedInvalid, Invalid: arg0}
}

type ValidatedTag int

const (
	ValidatedValid ValidatedTag = iota
	ValidatedInvalid
)

type Validated[T any] struct {
	Tag     ValidatedTag
	Valid   T
	Invalid string
}

func (v Validated[T]) String() string {
	switch v.Tag {
	case ValidatedValid:
		return fmt.Sprintf("Valid(%v)", v.Valid)
	case ValidatedInvalid:
		return fmt.Sprintf("Invalid(%v)", v.Invalid)
	default:
		return fmt.Sprintf("Validated(%d)", v.Tag)
	}
}

func (v Validated[T]) GoString() string {
	switch v.Tag {
	case ValidatedValid:
		return fmt.Sprintf("Validated.Valid(%v)", v.Valid)
	case ValidatedInvalid:
		return fmt.Sprintf("Validated.Invalid(%v)", v.Invalid)
	default:
		return fmt.Sprintf("Validated(%d)", v.Tag)
	}
}

type ValidationResult[T any] struct {
	Value     Validated[T]
	FieldName string
}

func (v ValidationResult[T]) String() string {
	return fmt.Sprintf("ValidationResult { value: %v, field_name: %v }", v.Value, v.FieldName)
}

func ValidationResult_NewInvalid[T any](field, msg string) ValidationResult[T] {
	return ValidationResult[T]{
		Value:     MakeValidatedInvalid[T](msg),
		FieldName: field,
	}
}

func ValidatePositive(field string, _ int) ValidationResult[int] {
	return ValidationResult_NewInvalid[int](field, "must be positive")
}

func ValidateNonEmpty(field, _ string) ValidationResult[string] {
	return ValidationResult_NewInvalid[string](field, "must not be empty")
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/lib"
)

func main() {
	r1 := lib.ValidatePositive("age", -1)
	r2 := lib.ValidateNonEmpty("name", "")
	fmt.Println(r1.FieldName)
	fmt.Println(r2.FieldName)
}
