tests/spec/build/snapshots/cross_module_generic_static_method_turbofish.snap
---
source: tests/spec/build/mod.rs
---
// === lib/mod.go ===
package lib

type Box[T any] struct {
	Val T
}

func Box_New[T any](v T) Box[T] {
	return Box[T]{Val: v}
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/lib"
)

func main() {
	b := lib.Box_New[int](42)
	fmt.Println(b.Val)
}
